syntax = "proto3";

package auth.v1alpha;

import "user/v1alpha/user.proto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string ip = 3;
}

message LoginResponse {
  string refresh_token = 1;
  enum STATUS {
    OK = 0;
    WRONG_PASSWORD = 1;
    NOT_FOUND = 2;
    INTERNAL = 3;
  }
  STATUS status = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
  string ip = 2;
}

message RefreshTokenResponse {
  string refresh_token = 1;
}